Fix z-index on header

--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -192,7 +192,7 @@ top: calc(50% - 17px);
   top: 0;
   left: 0;
   width: 100vw;
-  z-index: 20;
+  z-index: 50;
 }
 
 .fb-sub-header {
@@ -200,7 +200,7 @@ top: calc(50% - 17px);
   top: 50px;
   left: 0;
   width: 100vw;
-  z-index: 10;
+  z-index: 40;
   background-color: white;
 }
 
